--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ fabric_version=0.86.1+1.20.1
 
 maven_group=virtuoel
 archives_base_name=Pehkui
-mod_version=3.7.8
+mod_version=3.7.8-CUSTOM-IDENTITY-FIX
 metadata_minecraft_versions=1.14.4-1.20.1
 
 license_header=MIT
@@ -45,5 +45,7 @@ impl_fabric_modules=fabric-api-base, fabric-command-api-v2, fabric-networking-ap
 modmenu_version=7.1.0
 
 kanos_config_tag=0.4.1
+
+identity_version=2.7.1-1.20.1
 
 
